compiler/tests/en/errors/undefined.salam
// EXPECT: E001
func main: println undefined_var end
